# industrialspaces

./: app.py  main.py  models.py  pyproject.toml
attached_assets/: Pasted--html-lang-en-head-script-src-replco-static-devtools-eruda-3-2-3-eruda-js-script-link-ty-1735599724301.txt
instance/: properties.db
services/: recommendation_engine.py
static/css/: style.css
static/js/: main.js  map.js
templates/: about.html  base.html  contact.html  index.html  insights.html  market_updates.html  properties.html  property_detail.html  state_of_market.html  transactions.html
